--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build-aot": "ng build",
+    "build": "ng build --configuration production",
+    "build-dev": "ng build --configuration development",
     "test": "ng test"
   },
   "private": true,
